--- a/app/views/novedades/planificaciones/tabsPlanificaciones.scala.html
+++ b/app/views/novedades/planificaciones/tabsPlanificaciones.scala.html
@@ -6,130 +6,228 @@ totalHorarPorDiaPorPlanificacion:List[com.avaje.ebean.SqlRow])
 @import utils._
 @import helper._
 @implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) }
-<hr />
+
+@split(i:String) = @{
+
+	var s:Array[java.lang.String]= i.split("@@@")
+
+	var ret = new String()
+
+	for(sx <- s){
+	}
+
+
+	ret
+}
 
 @if(!formularioCarga){
+
+<hr />
 <div class="row">
-	<div class="col-sm-12">
-		@views.html.novedades.planificaciones.listaNovedades(planificacion)
-	</div>
-</div>
+	<ul id="recuperoFacturaTab" class="nav nav-tabs">
+		<li class="active"><a class="tabAcciones" href="#contenedorAcciones" data-toggle="tab">Acciones</a></li>
+		<li><a class="tabDetalles" href="#contenedorDetalles" data-toggle="tab">Novedades Detalles</a></li>
+		<li><a class="tabHoras" href="#contenedorHoras" data-toggle="tab">Cantidad Horas</a></li>
+		<li><a class="tabNotas" href="#contenedorNotas" data-toggle="tab">Notas Servicio</a></li>
+		<li><a class="tabNotasRrhh" href="#contenedorNotasRrhh" data-toggle="tab">Notas RRHH</a></li>
+		<li><a class="tabNotasNotasLiqui" href="#contenedorNotasLiqui" data-toggle="tab">Notas Liquidaciones</a></li>
+	</ul>
+
+	<div class="tab-content">
+
+		<div class="tab-pane active" id="contenedorAcciones">
+			 <div class="row">
+				<div class="col-sm-6">
+					 <div class="panel panel-default">
+						<div class="panel-heading"><b>Detalles</b></div>
+						<div class="panel-body">
+
+							<div class="row margin-bottom-25">
+								<div class="col-sm-12">
+									<table class="table table-bordered">
+										<thead>
+											<tr>
+												<th colspan="2" style="text-align: center;">Habiles HS</th>
+												<th colspan="2" style="text-align: center;">Inhabiles HS</th>
+											</tr>
+											<tr>
+												<th style="text-align: center;">Dispo</th>
+												<th style="text-align: center;">Cargadas</th>
+												<th style="text-align: center;">Dispo</th>
+												<th style="text-align: center;">Cargadas</th>
+											</tr>
+										</thead>
+										<tbody>
+											<tr>
+												<td align="center">@diasHabilesInhabiles.get("habilesHoras")</td>
+												<td align="center">@if(planificacion.horashabiles!= null){@planificacion.horashabiles}else{0}</td>
+												<td align="center">@diasHabilesInhabiles.get("inhabilesHoras")</td>
+												<td align="center">@if(planificacion.horasinhabiles!= null){@planificacion.horasinhabiles}else{0}</td>
+											</tr>
+										</tbody>
+
+									</table>
+									<!-- <h4>:
+										<b>@planificacion.habiles</b>
+									</h4>
+									<h4>Inhabiles:
+										<b>@planificacion.inhabiles</b>
+									</h4> -->
 
 
 
-<div class="row">
-	<div class="col-sm-6">
-		 <div class="panel panel-default">
-			<div class="panel-heading"><b>Detalles</b></div>
-			<div class="panel-body">
-
-				<div class="row margin-bottom-25">
-					<div class="col-sm-12">
-						<table class="table table-bordered">
-							<thead>
-								<tr>
-									<th colspan="2" style="text-align: center;">Habiles HS</th>
-									<th colspan="2" style="text-align: center;">Inhabiles HS</th>
-								</tr>
-								<tr>
-									<th style="text-align: center;">Dispo</th>
-									<th style="text-align: center;">Cargadas</th>
-									<th style="text-align: center;">Dispo</th>
-									<th style="text-align: center;">Cargadas</th>
-								</tr>
-							</thead>
-							<tbody>
-								<tr>
-									<td align="center">@diasHabilesInhabiles.get("habilesHoras")</td>
-									<td align="center">@if(planificacion.horashabiles!= null){@planificacion.horashabiles}else{0}</td>
-									<td align="center">@diasHabilesInhabiles.get("inhabilesHoras")</td>
-									<td align="center">@if(planificacion.horasinhabiles!= null){@planificacion.horasinhabiles}else{0}</td>
-								</tr>
-							</tbody>
-
-						</table>
-						<!-- <h4>:
-							<b>@planificacion.habiles</b>
-						</h4>
-						<h4>Inhabiles:
-							<b>@planificacion.inhabiles</b>
-						</h4> -->
-
-
-
-					</div>
-				</div>
-
-			</div>
-		</div>
-	</div>
-	<div class="col-sm-6">
-		<div class="panel panel-default">
-			<div class="panel-heading"><b>Acciones</b></div>
-			<div class="panel-body">
-
-				<div class="row margin-bottom-25">
-
-					<div class="col-sm-12">
-						<div class="row">
-
-							@for(estado <- models.Estado.getSiguienteEstadoPorAprobar(planificacion.estado.orden,models.Estado.TIPO_PLANIFICACION)) {
-								@if(estado.orden <= 3) {
-									<div class="col-sm-3">
-										<a href="@controllers.novedades.routes.PlanificacionesController.cambiarEstado(planificacionForm.field("id").value.toInt, estado.id.toLong)@UriTrack.get("&")" class="btn btn-default">
-											<i class="glyphicon glyphicon-arrow-right"></i> @estado.nombre
-										</a>
-									</div>
-
-								}
-							}
-
-							@if(planificacion.estado.id == models.Estado.PLANIFICIACION_CANCELADO) {
-								<div class="col-sm-3">
-									<a href="@controllers.novedades.routes.PlanificacionesController.cambiarEstado(planificacionForm.field("id").value.toInt, models.Estado.PLANIFICIACION_BORRADOR)@UriTrack.get("&")" class="btn btn-default">
-										<i class="glyphicon glyphicon-arrow-right"></i> Volver a Borrador
-									</a>
 								</div>
-							}else{
-								<div class="col-sm-3">
-									<a href="@controllers.novedades.routes.PlanificacionesController.cambiarEstado(planificacionForm.field("id").value.toInt, models.Estado.PLANIFICIACION_CANCELADO)@UriTrack.get("&")" class="btn btn-default">
-										<i class="glyphicon glyphicon-minus-sign"></i> Cancelar Planificacion
-									</a>
-								</div>
-							}
+							</div>
 
 						</div>
-							<hr>
+					</div>
+				</div>
+				<div class="col-sm-6">
+					<div class="panel panel-default">
+						<div class="panel-heading"><b>Acciones</b></div>
+						<div class="panel-body">
 
-							<h4>Estado:
-								<b>@planificacion.estado.nombre</b>
-							</h4>
+							<div class="row margin-bottom-25">
 
+								<div class="col-sm-12">
+									<div class="row">
+
+										@for(estado <- models.Estado.getSiguienteEstadoPorAprobar(planificacion.estado.orden,models.Estado.TIPO_PLANIFICACION)) {
+											@if(estado.orden <= 3) {
+												<div class="col-sm-3">
+													<a href="@controllers.novedades.routes.PlanificacionesController.cambiarEstado(planificacionForm.field("id").value.toInt, estado.id.toLong)@UriTrack.get("&")" class="btn btn-default">
+														<i class="glyphicon glyphicon-arrow-right"></i> @estado.nombre
+													</a>
+												</div>
+
+											}
+										}
+
+										@if(planificacion.estado.id == models.Estado.PLANIFICIACION_CANCELADO) {
+											<div class="col-sm-3">
+												<a href="@controllers.novedades.routes.PlanificacionesController.cambiarEstado(planificacionForm.field("id").value.toInt, models.Estado.PLANIFICIACION_BORRADOR)@UriTrack.get("&")" class="btn btn-default">
+													<i class="glyphicon glyphicon-arrow-right"></i> Volver a Borrador
+												</a>
+											</div>
+										}else{
+											<div class="col-sm-3">
+												<a href="@controllers.novedades.routes.PlanificacionesController.cambiarEstado(planificacionForm.field("id").value.toInt, models.Estado.PLANIFICIACION_CANCELADO)@UriTrack.get("&")" class="btn btn-default">
+													<i class="glyphicon glyphicon-minus-sign"></i> Cancelar Planificacion
+												</a>
+											</div>
+										}
+
+									</div>
+										<hr>
+
+										<h4>Estado:
+											<b>@planificacion.estado.nombre</b>
+										</h4>
+
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-</div>
-<div class="row">
-	<div class="col-sm-12">
-		<table id="" class="table table-striped table-bordered">
-			<thead>
-				<tr>
-				 	<th>Fecha</th>
-					<th>Horas</th>
-				<tr>
-			</thead>
-			<tbody>
-			@for(sx <- totalHorarPorDiaPorPlanificacion) {
-				<tr data-id="">
-					<td class="fecha">@(utils.DateUtils.formatDate(sx.getDate("fecha")))</td>
-					<td>@sx.getInteger("horas")</td>
+		<div class="tab-pane" id="contenedorDetalles">
+			<div class="row">
+				<div class="panel panel-default">
+					<div class="panel-heading"><b>Listado Novedades Detalles</b></div>
+					<div class="panel-body">
+						<div class="col-sm-12">
+							@views.html.novedades.planificaciones.listaNovedades(planificacion)
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="tab-pane" id="contenedorHoras">
+			<div class="row">
+				<div class="panel panel-default">
+					<div class="panel-heading"><b>Listado Cantidad Por Horas Por dia</b></div>
+					<div class="panel-body">
+						<div class="col-sm-12">
+							<table id="" class="table table-striped table-bordered">
+								<thead>
+									<tr>
+									 	<th>Fecha</th>
+										<th>Horas</th>
+									<tr>
+								</thead>
+								<tbody>
+								@for(sx <- totalHorarPorDiaPorPlanificacion) {
+									<tr data-id="">
+										<td class="fecha">@(utils.DateUtils.formatDate(sx.getDate("fecha")))</td>
+										<td>@sx.getInteger("horas")</td>
 
-				</tr>
-			}
-			</tbody>
-		</table>
+									</tr>
+								}
+								</tbody>
+							</table>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="tab-pane" id="contenedorNotas">
+			<div class="row">
+				<div class="panel panel-default" style="margin: 10px">
+					<div class="panel-heading"><b>Notas Servicios</b></div>
+					<div class="panel-body"  >
+						<div class="col-sm-12" >
+							<div>
+								@if(planificacion.nota_servicio != null && !planificacion.nota_servicio.isEmpty()){
+									@Html(split(planificacionForm.field("nota_servicio").value))
+								}
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+	<div class="tab-pane" id="contenedorNotasRrhh">
+			<div class="row">
+				<div class="panel panel-default" style="margin: 10px">
+					<div class="panel-heading"><b>Notas RRHH</b></div>
+					<div class="panel-body"  >
+						<div class="col-sm-12" >
+							<div>
+								@if(planificacion.nota_rrhh != null && !planificacion.nota_rrhh.isEmpty()){
+									@Html(split(planificacionForm.field("nota_rrhh").value))
+								}
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="tab-pane" id="contenedorNotasLiqui">
+			<div class="row">
+				<div class="panel panel-default" style="margin: 10px">
+					<div class="panel-heading"><b>Notas Liquidaciones</b></div>
+					<div class="panel-body"  >
+						<div class="col-sm-12" >
+							<div>
+								@if(planificacion.nota_liquidaciones != null && !planificacion.nota_liquidaciones.isEmpty()){
+									@Html(split(planificacionForm.field("nota_liquidaciones").value))
+								}
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+
 	</div>
 </div>
+
+
+
+
+
+
 }
