--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -126,7 +126,7 @@
 			}
 			@if(Modulo.check(Modulo.NOVEDADES)) {
 
-				<li><a class="navbar-brand @getClassEstadoActive("equipo")" href="@controllers.novedades.routes.IndexController.index()">Novedades</a></li>
+				<li><a class="navbar-brand @getClassEstadoActive("equipo")" href="@controllers.novedades.routes.IndexController.index()">Mi Servicio</a></li>
 			}
 
 	        <!-- <li class="dropdown">
