--- a/app/views/novedades/planificaciones/indexPlanificaciones.scala.html
+++ b/app/views/novedades/planificaciones/indexPlanificaciones.scala.html
@@ -66,14 +66,17 @@
 				  <button type="button" id="btn-filtro-aprobado" rel="aprobado" class="btn btn-default btn-filtros"><i class="glyphicon glyphicon-ok"></i><br>Aprobado Serv.
 				  	@checkbox(formBuscador("btnFiltro[2]"), 'hidden -> "hidden")
 				  </button>
-				   <button type="button" id="btn-filtro-aprobado" rel="aprobado" class="btn btn-default btn-filtros"><i class="glyphicon glyphicon-ok"></i><br>Aprobado RRHH
+				  <button type="button" id="btn-filtro-aprobado" rel="aprobado" class="btn btn-default btn-filtros"><i class="glyphicon glyphicon-ok"></i><br>Aprobado Asistencial
 				  	@checkbox(formBuscador("btnFiltro[3]"), 'hidden -> "hidden")
 				  </button>
-				   <button type="button" id="btn-filtro-aprobado" rel="aprobado" class="btn btn-default btn-filtros"><i class="glyphicon glyphicon-ok"></i><br>Aprobado Liqui.
+				   <button type="button" id="btn-filtro-aprobado" rel="aprobado" class="btn btn-default btn-filtros"><i class="glyphicon glyphicon-ok"></i><br>Aprobado RRHH
 				  	@checkbox(formBuscador("btnFiltro[4]"), 'hidden -> "hidden")
 				  </button>
-				  <button type="button" id="btn-filtro-cancelado" rel="cancelado" class="btn btn-default btn-filtros"><i class="glyphicon glyphicon-minus-sign"></i><br>Cancelado
+				   <button type="button" id="btn-filtro-aprobado" rel="aprobado" class="btn btn-default btn-filtros"><i class="glyphicon glyphicon-ok"></i><br>Aprobado Liqui.
 				  	@checkbox(formBuscador("btnFiltro[5]"), 'hidden -> "hidden")
+				  </button>
+				  <button type="button" id="btn-filtro-cancelado" rel="cancelado" class="btn btn-default btn-filtros"><i class="glyphicon glyphicon-minus-sign"></i><br>Cancelado
+				  	@checkbox(formBuscador("btnFiltro[6]"), 'hidden -> "hidden")
 				  </button>
 				</div>
 			</div>
