--- a/app/views/recupero/recuperoFactura/modalBusquedaRecuperoFactura.scala.html
+++ b/app/views/recupero/recuperoFactura/modalBusquedaRecuperoFactura.scala.html
@@ -51,7 +51,7 @@
     </table>
 
 	<div class="pagination pull-right">
-	    @views.html.helpers.paginador(buscador, controllers.recupero.routes.RecuperoFacturasController.modalBuscar())
+	    @views.html.helpers.paginador(buscador, controllers.recupero.routes.RecuperoFacturasController.modalBuscarSoloSaldo())
 	</div>
 }
 </div>
