--- a/app/views/haberes/liquidacionEmbargos/indexLiquidacionEmbargo.scala.html
+++ b/app/views/haberes/liquidacionEmbargos/indexLiquidacionEmbargo.scala.html
@@ -181,7 +181,7 @@
 					<th>Fecha Inicio</th>
 					<th>Fecha Fin</th>
 					<th>Tipo</th>
-					<th>Cargado</th>
+					<th>Csargado</th>
 					<th>Importe Tope</th>
 					<th>Resto</th>
 					<th>Estado</th>
