--- a/app/views/novedades/planificaciones/tabsPlanificaciones.scala.html
+++ b/app/views/novedades/planificaciones/tabsPlanificaciones.scala.html
@@ -30,13 +30,14 @@ totalHorarPorDiaPorPlanificacion:List[com.avaje.ebean.SqlRow])
 
 		<!-- -------------------PRODUCCION GENERAL----------------------------- -->
 		@if(planificacion.tipo_planificacion_id == models.novedades.TipoPlanificacion.PRODUCCION_GENERAL) {
-
+			<li><a class="tabDetalles" href="#contenedorProduccionTotalizados" data-toggle="tab">Produccion Totalizados</a></li>
 			<li><a class="tabDetalles" href="#contenedorDetalles" data-toggle="tab">Detalles Por Agente</a></li>
 
 		}
 
 		<!-- -------------------GUARDIAS----------------------------- -->
 		@if(planificacion.tipo_planificacion_id == models.novedades.TipoPlanificacion.GUARDIA) {
+
 			<li><a class="tabDetalles" href="#contenedorDetalles" data-toggle="tab">Novedades Detalles</a></li>
 			<li><a class="tabHoras" href="#contenedorHoras" data-toggle="tab">Cantidad Horas</a></li>
 		}
@@ -125,6 +126,18 @@ totalHorarPorDiaPorPlanificacion:List[com.avaje.ebean.SqlRow])
 			</div>
 		</div>
 		@if(planificacion.tipo_planificacion_id == models.novedades.TipoPlanificacion.PRODUCCION_GENERAL) {
+			<div class="tab-pane" id="contenedorProduccionTotalizados">
+				<div class="row">
+					<div class="panel panel-default">
+						<div class="panel-heading"><b>Listado Produccion Totalizados Por Agente</b></div>
+						<div class="panel-body">
+							<div class="col-sm-12">
+								@views.html.novedades.planificaciones.tabs.detallesProduccionTotalizados(planificacion)
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 			<div class="tab-pane" id="contenedorDetalles">
 				<div class="row">
 					<div class="panel panel-default">
