--- a/app/views/novedades/planificaciones/tabs/detallesProduccionTotalizadosTemplate.scala.html
+++ b/app/views/novedades/planificaciones/tabs/detallesProduccionTotalizadosTemplate.scala.html
@@ -5,24 +5,29 @@
 @implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) }
 @import java.lang.Integer; var bandera =0;var xx =0
 @import java.lang.String;var agenteNombre =""
-@import java.math.BigDecimal;var total=new java.math.BigDecimal(0);
+@import java.math.BigDecimal;var total=new java.math.BigDecimal(0);var porcentaje=new java.math.BigDecimal(0);
 
 <table class="table table-striped table-bordered table-hover" id="listaInforme">
 		<thead>
-			<th colspan="3" align="center" style="font-size:20px;">PRODUCCION TOTALIZADA</th>
+			<th colspan="4" align="center" style="font-size:20px;">PRODUCCION TOTALIZADA</th>
 		</thead>
 
 		<thead>
 			<th>Nombre</th>
 			<th width="100" style="text-align: center;">Produccion Bruta</th>
 			<th width="100" style="text-align: center;">Produccion Neta</th>
+			<th width="100" style="text-align: center;">%</th>
 		</thead>
 	<tbody>
 		@for(ppp <- produccionPuestoPeriodo) {
+			@{porcentaje= ppp.getBigDecimal("produccion_mes").multiply(new java.math.BigDecimal(100)).divide(ppp.getBigDecimal("monto_tope"), 2, java.math.RoundingMode.HALF_UP).subtract(new java.math.BigDecimal(100)) }
 			<tr>
 				<td>@ppp.getString("apellido")</td>
 				<td style="text-align: center;">@utils.NumberUtils.moneda(ppp.getBigDecimal("produccion_mes"))</td>
 				<td style="text-align: right;">@utils.NumberUtils.moneda(ppp.getBigDecimal("total_produccion"))</td>
+				<td style="text-align: right;">
+					<b @if(porcentaje.compareTo(java.math.BigDecimal.ZERO) < 0){ style="color:red;"} >@porcentaje %</b>
+				</td>
 			</tr>
 			@{total= total.add(ppp.getBigDecimal("total_produccion"))}
 		}
@@ -34,6 +39,7 @@
 		<td align="right" colspan="2"><b>TOTALES</b></td>
 
 		<td style="text-align: right;"><b>@utils.NumberUtils.moneda(total)</b></td>
+		<td align="right"><b></b></td>
 		</tr>
 	</tfoot>
 </table>
