--- a/app/views/novedades/planificaciones/verPlanificaciones.scala.html
+++ b/app/views/novedades/planificaciones/verPlanificaciones.scala.html
@@ -84,6 +84,12 @@ totalHorarPorDiaPorPlanificacion:List[com.avaje.ebean.SqlRow])
 				<p class="form-control-static form-control">@planificacionesForm.field("periodo.nombre").value</p>
 			</div>
 		</div>
+		<div class="col-sm-2">
+			<div class="form-group">
+				<label class="control-label">Periodo Liquidacion</label>
+				<p class="form-control-static form-control">@planificacionesForm.field("periodoLiquidacion.nombre").value</p>
+			</div>
+		</div>
 	</div>
 
 
