--- a/app/views/recupero/recuperoCliente/index.scala.html
+++ b/app/views/recupero/recuperoCliente/index.scala.html
@@ -26,6 +26,7 @@
 @views.html.tags.successError()
 
 <form action="" method="GET">
+@inputText(formBuscador("tipoCliente"), 'hidden -> "hidden")
 	<div class="row">
 		<div class="col-sm-3">
 			<div class="form-group">
@@ -58,6 +59,7 @@
 				</label>
 			</div>
 		</div>
+
 	</div>
 	<div class="row">
 
