--- a/app/views/dashboard/autorizados/contenidoTabCargaActa.scala.html
+++ b/app/views/dashboard/autorizados/contenidoTabCargaActa.scala.html
@@ -1,4 +1,4 @@
-@(buscador: utils.pagination.Pagination[models.informes.InformeDeudaPorActaMaterializada], formBuscador: DynamicForm,idAutorizado:Long,autorizado:Autorizado)
+@(buscador: utils.pagination.Pagination[models.informes.InformeDeudaPorActa], formBuscador: DynamicForm,idAutorizado:Long,autorizado:Autorizado)
 @import helper._
 @implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) }
 @import java.math.BigDecimal;var resto_autorizar=new java.math.BigDecimal(0);
