--- a/app/views/novedades/planificaciones/tabs/detallesProduccionImagenesTotalizadosTemplate.scala.html
+++ b/app/views/novedades/planificaciones/tabs/detallesProduccionImagenesTotalizadosTemplate.scala.html
@@ -9,7 +9,7 @@
 
 <table class="table table-striped table-bordered table-hover" id="listaInforme">
 		<thead>
-			<th colspan="10" align="center" style="font-size:20px;">PRODUCCION TOTALIZADA</th>
+			<th colspan="11" align="center" style="font-size:20px;">PRODUCCION TOTALIZADA</th>
 		</thead>
 
 		<thead>
@@ -23,7 +23,7 @@
 			<th width="100" style="text-align: center;">Min. Exc.</th>
 			<th width="100" style="text-align: center;">Produccion</th>
 			<th width="100" style="text-align: center;">%</th>
-
+			<th width="100" style="text-align: center;">% NETA</th>
 
 
 
@@ -33,6 +33,7 @@
 			@{minutos_practicas =new java.math.BigDecimal(ppp.getInteger("minutos_practicas"))}
 			@{minutos_profesional = new java.math.BigDecimal(ppp.getInteger("minutos_profesional"))}
 			@{porcentaje= minutos_practicas.multiply(new java.math.BigDecimal(100)).divide(minutos_profesional, 2, java.math.RoundingMode.HALF_UP).subtract(new java.math.BigDecimal(100)) }
+
 
 
 
@@ -46,19 +47,29 @@
 				<td style="text-align: center;">@utils.NumberUtils.moneda(ppp.getBigDecimal("monto_especialidad"))</td>
 				<td style="text-align: center;">@ppp.getInteger("minutos_exedentes")</td>
 				<td style="text-align: center;">@utils.NumberUtils.moneda(ppp.getBigDecimal("produccion"))</td>
-				<td style="text-align: center;">
+				 <td style="text-align: center;">
 					<b @if(porcentaje.compareTo(java.math.BigDecimal.ZERO) < 0){ style="color:red;"} >@porcentaje %</b>
+				</td>
+				<td style="text-align: center;">
+					<b @if(porcentaje.add(new java.math.BigDecimal(100)).compareTo(new java.math.BigDecimal(80)) < 0){ style="color:red;"} >@porcentaje.add(new java.math.BigDecimal(100))%</b>
 				</td>
 
 			</tr>
 
+			 @if(ppp.getBigDecimal("produccion").compareTo(java.math.BigDecimal.ZERO) > 0){
+				@{total= total.add(ppp.getBigDecimal("produccion"))}
+				}
+
+
+
 		}
 	</tbody>
 
-<tfoot>
-	<tr>
-
-
+	<tfoot>
+		<tr>
+			<td align="right" colspan="8"><b>TOTALES</b></td>
+			<td style="text-align: right;"><b>@utils.NumberUtils.moneda(total)</b></td>
+			<td align="right" colspan="2"><b></b></td>
 		</tr>
 	</tfoot>
 </table>
