--- a/app/views/novedades/planificaciones/tabs/detallesProduccionImagenesTotalizadosTemplate.scala.html
+++ b/app/views/novedades/planificaciones/tabs/detallesProduccionImagenesTotalizadosTemplate.scala.html
@@ -9,7 +9,7 @@
 
 <table class="table table-striped table-bordered table-hover" id="listaInforme">
 		<thead>
-			<th colspan="11" align="center" style="font-size:20px;">PRODUCCION TOTALIZADA</th>
+			<th colspan="9" align="center" style="font-size:20px;">PRODUCCION TOTALIZADA</th>
 		</thead>
 
 		<thead>
@@ -18,12 +18,12 @@
 			<th width="100" style="text-align: center;">Min. Prof.</th>
 			<th width="100" style="text-align: center;">Min. Pract.</th>
 			<th width="100" style="text-align: center;">Valor Min.</th>
-			<th width="100" style="text-align: center;">Monto Sueldo</th>
-			<th width="100" style="text-align: center;">Monto Espec.</th>
+			<!-- <th width="100" style="text-align: center;">Monto Sueldo</th>
+			<th width="100" style="text-align: center;">Monto Espec.</th> -->
 			<th width="100" style="text-align: center;">Min. Exc.</th>
 			<th width="100" style="text-align: center;">Produccion</th>
-			<th width="100" style="text-align: center;">%</th>
-			<th width="100" style="text-align: center;">% NETA</th>
+			<th width="100" style="text-align: center;">% NETO</th>
+			<th width="100" style="text-align: center;">% Bruto</th>
 
 
 
@@ -32,7 +32,7 @@
 		@for(ppp <- produccionPuestoPeriodo) {
 			@{minutos_practicas =new java.math.BigDecimal(ppp.getInteger("minutos_practicas"))}
 			@{minutos_profesional = new java.math.BigDecimal(ppp.getInteger("minutos_profesional"))}
-			@{porcentaje= minutos_practicas.multiply(new java.math.BigDecimal(100)).divide(minutos_profesional, 2, java.math.RoundingMode.HALF_UP).subtract(new java.math.BigDecimal(100)) }
+			@{porcentaje= minutos_practicas.multiply(new java.math.BigDecimal(100)).divide(minutos_profesional, 2, java.math.RoundingMode.HALF_UP).subtract(new java.math.BigDecimal(100)).setScale(0, java.math.RoundingMode.HALF_UP) }
 
 
 
@@ -43,15 +43,21 @@
 				<td style="text-align: center;">@ppp.getInteger("minutos_profesional")</td>
 				<td style="text-align: center;">@ppp.getInteger("minutos_practicas")</td>
 				<td style="text-align: center;">@utils.NumberUtils.moneda(ppp.getBigDecimal("valor_minuto"))</td>
-				<td style="text-align: center;">@utils.NumberUtils.moneda(ppp.getBigDecimal("monto_sueldo"))</td>
-				<td style="text-align: center;">@utils.NumberUtils.moneda(ppp.getBigDecimal("monto_especialidad"))</td>
+				<!--<td style="text-align: center;">@utils.NumberUtils.moneda(ppp.getBigDecimal("monto_sueldo"))</td>
+				<td style="text-align: center;">@utils.NumberUtils.moneda(ppp.getBigDecimal("monto_especialidad"))</td> -->
 				<td style="text-align: center;">@ppp.getInteger("minutos_exedentes")</td>
-				<td style="text-align: center;">@utils.NumberUtils.moneda(ppp.getBigDecimal("produccion"))</td>
+				<td style="text-align: center;">
+					@if(ppp.getBigDecimal("produccion").compareTo(java.math.BigDecimal.ZERO) > 0){
+						@utils.NumberUtils.moneda(ppp.getBigDecimal("produccion"))
+					}else{
+						@utils.NumberUtils.moneda(java.math.BigDecimal.ZERO)
+					}
+				</td>
 				 <td style="text-align: center;">
 					<b @if(porcentaje.compareTo(java.math.BigDecimal.ZERO) < 0){ style="color:red;"} >@porcentaje %</b>
 				</td>
 				<td style="text-align: center;">
-					<b @if(porcentaje.add(new java.math.BigDecimal(100)).compareTo(new java.math.BigDecimal(80)) < 0){ style="color:red;"} >@porcentaje.add(new java.math.BigDecimal(100))%</b>
+					<b @if(porcentaje.add(new java.math.BigDecimal(100)).compareTo(new java.math.BigDecimal(80)) < 0){ style="color:red;"} >@porcentaje.add(new java.math.BigDecimal(100)).setScale(0, java.math.RoundingMode.HALF_UP)%</b>
 				</td>
 
 			</tr>
@@ -67,7 +73,7 @@
 
 	<tfoot>
 		<tr>
-			<td align="right" colspan="8"><b>TOTALES</b></td>
+			<td align="right" colspan="6"><b>TOTALES</b></td>
 			<td style="text-align: right;"><b>@utils.NumberUtils.moneda(total)</b></td>
 			<td align="right" colspan="2"><b></b></td>
 		</tr>
