--- a/app/views/novedades/planificaciones/tabs/detallesPracticasImagenesMinutos.scala.html
+++ b/app/views/novedades/planificaciones/tabs/detallesPracticasImagenesMinutos.scala.html
@@ -4,7 +4,7 @@
 
 	<script>
 	$( function (){
-		$.get('@controllers.novedades.routes.ProduccionImagenesController.detallesPracticasImagenesMinutos(planificacion.id)', function(data){
+		$.get('@controllers.novedades.routes.ProduccionImagenesController.detallesPracticasImagenesMinutos(planificacion.id,planificacion.periodo_id)', function(data){
 			$('#listaDetallesPracticasImagenesMinutos').parent().html(data);
 		})
 	});
